--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
